--- a/index.html
+++ b/index.html
@@ -8,4 +8,343 @@
     <h1>Bem-vindo à Wolf Studios Produções</h1>
     <p>Site publicado com sucesso usando GitHub + Vercel!</p>
 </body>
+</html>body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #0a0a0a;
+    color: #e0e0e0;
+}
+
+header {
+    background: #111;
+    padding: 20px;
+    text-align: center;
+    border-bottom: 2px solid #333;
+}
+
+header h1 {
+    color: #c0c0c0;
+    font-size: 32px;
+    letter-spacing: 2px;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    background: #151515;
+    padding: 15px;
+    border-bottom: 1px solid #333;
+}
+
+nav a {
+    color: #d4d4d4;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 18px;
+    transition: 0.3s;
+}
+
+nav a:hover {
+    color: #ffffff;
+}
+
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 20px;
+}
+
+.card {
+    background: #1a1a1a;
+    padding: 15px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #333;
+}
+
+.card img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+button, .btn {
+    display: inline-block;
+    background: #444;
+    padding: 10px 18px;
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 10px;
+    transition: 0.3s;
+    border: none;
+}
+
+button:hover, .btn:hover {
+    background: #666;
+}
+
+footer {
+    margin-top: 30px;
+    padding: 20px;
+    text-align: center;
+    background: #111;
+    border-top: 1px solid #333;
+}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Wolf Studios Produções</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+    <h1>Wolf Studios Produções</h1>
+</header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+    <div class="card">
+        <h2>Bem-vindo à Wolf Studios</h2>
+        <p>A casa da sua criatividade — Filmes, Quadrinhos e Multimídia produzidos por Jeff.</p>
+        <a class="btn" href="filmes.html">Ver Filmes</a>
+        <a class="btn" href="hqs.html">Ver Quadrinhos</a>
+    </div>
+</div>
+
+<footer>
+    Wolf Studios Produções © 2025
+</footer>
+
+</body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Filmes - Wolf Studios Produções</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header><h1>Filmes Wolf Studios</h1></header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+
+    <div class="card">
+        <h2>Título do Filme</h2>
+        <img src="https://via.placeholder.com/900x400?text=Capa+do+Filme">
+        <p>Descrição do filme produzido por Jeff.</p>
+        <p><strong>Preço: R$ 15,00</strong></p>
+        <a class="btn" href="https://wa.me/55SEUNUMERO">Comprar pelo WhatsApp</a>
+    </div>
+
+</div>
+
+<footer>Wolf Studios Produções © 2025</footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>HQs - Wolf Studios Produções</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header><h1>Quadrinhos Wolf Studios</h1></header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+
+    <div class="card">
+        <h2>Título da HQ</h2>
+        <img src="https://via.placeholder.com/900x400?text=Capa+da+HQ">
+        <p>Descrição da HQ criada por Jeff.</p>
+        <p><strong>Preço: R$ 10,00</strong></p>
+        <a class="btn" href="https://wa.me/55SEUNUMERO">Comprar pelo WhatsApp</a>
+    </div>
+
+</div>
+
+<footer>Wolf Studios Produções © 2025</footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Loja - Wolf Studios</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header><h1>Loja Wolf Studios</h1></header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+<div class="container">
+    <h2>Filmes</h2>
+    <div class="card">
+        <img src="https://via.placeholder.com/900x400?text=Capa+do+Filme">
+        <h3>Título do Filme</h3>
+        <p>Descrição curta.</p>
+        <strong>R$ 15,00</strong>
+        <a class="btn" href="https://wa.me/55SEUNUMERO">Comprar</a>
+    </div>
+    <h2>Quadrinhos</h2>
+    <div class="card">
+        <img src="https://via.placeholder.com/900x400?text=Capa+da+HQ">
+        <h3>Título da HQ</h3>
+        <p>Descrição curta.</p>
+        <strong>R$ 10,00</strong>
+        <a class="btn" href="https://wa.me/55SEUNUMERO">Comprar</a>
+    </div>
+</div>
+<footer>Wolf Studios Produções © 2025</footer>
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Vídeos - Wolf Studios</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header><h1>Vídeos e Trailers</h1></header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+
+    <div class="card">
+        <h2>Título do Vídeo</h2>
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/SEUVIDEO"></iframe>
+    </div>
+
+</div>
+
+<footer>Wolf Studios Produções © 2025</footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Sobre - Wolf Studios Produções</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header><h1>Sobre a Wolf Studios</h1></header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+    <div class="card">
+        <h2>Quem somos?</h2>
+        <p>Wolf Studios Produções é uma produtora independente criada por Jeff, focada em filmes, quadrinhos, efeitos especiais e narrativas criativas.</p>
+        <p>Todos os filmes e HQs vendidos nesta plataforma são **produções originais**.</p>
+    </div>
+</div>
+
+<footer>Wolf Studios Produções © 2025</footer>
+
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Contato - Wolf Studios</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header><h1>Contato</h1></header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+
+    <div class="card">
+        <h2>Fale conosco</h2>
+        <p>WhatsApp: <strong>(coloque seu número)</strong></p>
+        <p>Email: <strong>(se tiver, me diga que eu coloco)</strong></p>
+        <p>Instagram: @wolfstudios</p>
+
+        <a class="btn" href="https://wa.me/55SEUNUMERO">Enviar mensagem</a>
+    </div>
+
+</div>
+
+<footer>Wolf Studios Produções © 2025</footer>
+
+</body>
+</html>
+
+
