--- a/index.html
+++ b/index.html
@@ -345,6 +345,162 @@ footer {
 <footer>Wolf Studios Produções © 2025</footer>
 
 </body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Wolf Studios Produções</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+    <h1>Wolf Studios Produções</h1>
+</header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+    <div class="card">
+        <h2>Bem-vindo à Wolf Studios</h2>
+        <p>A casa da sua criatividade — Filmes, Quadrinhos e Multimídia produzidos por Jeff.</p>
+        <a class="btn" href="filmes.html">Ver Filmes</a>
+        <a class="btn" href="hqs.html">Ver Quadrinhos</a>
+    </div>
+</div>
+
+<footer>
+    Wolf Studios Produções © 2025
+</footer>
+
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Filmes - Wolf Studios Produções</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header><h1>Filmes Wolf Studios</h1></header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+
+    <div class="card">
+        <h2>Título do Filme</h2>
+        <img src="https://via.placeholder.com/900x400?text=Capa+do+Filme">
+        <p>Descrição do filme produzido por Jeff.</p>
+        <p><strong>Preço: R$ 15,00</strong></p>
+        <a class="btn" href="https://wa.me/55SEUNUMERO">Comprar pelo WhatsApp</a>
+    </div>
+
+</div>
+
+<footer>Wolf Studios Produções © 2025</footer>
+
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Loja - Wolf Studios</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header><h1>Loja Wolf Studios</h1></header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+
+    <h2>Filmes</h2>
+    <div class="card">
+        <img src="https://via.placeholder.com/900x400?text=Capa+do+Filme">
+        <h3>Título do Filme</h3>
+        <p>Descrição curta.</p>
+        <strong>R$ 15,00</strong>
+        <a class="btn" href="https://wa.me/55SEUNUMERO">Comprar</a>
+    </div>
+
+    <h2>Quadrinhos</h2>
+    <div class="card">
+        <img src="https://via.placeholder.com/900x400?text=Capa+da+HQ">
+        <h3>Título da HQ</h3>
+        <p>Descrição curta.</p>
+        <strong>R$ 10,00</strong>
+        <a class="btn" href="https://wa.me/55SEUNUMERO">Comprar</a>
+    </div>
+
+</div>
+
+<footer>Wolf Studios Produções © 2025</footer>
+
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Vídeos - Wolf Studios</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header><h1>Vídeos e Trailers</h1></header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="filmes.html">Filmes</a>
+    <a href="hqs.html">Quadrinhos</a>
+    <a href="loja.html">Loja</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+</nav>
+
+<div class="container">
+
+    <div class="card">
+        <h2>Título do Vídeo</h2>
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/SEUVIDEO"></iframe>
+    </div>
+
+</div>
+
+<footer>Wolf Studios Produções © 2025</footer>
+
+</body>
 </html>
+
+
+
+
 
 
