--- a/index.html
+++ b/index.html
@@ -352,7 +352,9 @@ const pages = {
         <!-- CONTEÚDO HTML DE HQS -->
     `,
     // ... e assim por diante para todas as outras seções
-};
+};// **FUNCIONALIDADE CRÍTICA: Variável de Controle de Contato**
+const WHATSAPP_NUMBER = "41998984617"; // SEU NÚMERO DE WHATSAPP
+const EMAIL_ADDRESS = "wolfstudiosproducoes@gmail.com"; // SEU NOVO E-MAIL PROFISSIONAL
 
 
 
