--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         </li>
                         <li class="flex items-center gap-3">
                             <span class="text-pink-500 font-bold">Instagram:</span> 
-                            <a href="https://instagram.com/wolfstudios" target="_blank" class="text-blue-400 hover:text-blue-300 transition duration-300">@wolfstudios</a>
+                            <a href="https://instagram.com/wolfstudios24" target="_blank" class="text-blue-400 hover:text-blue-300 transition duration-300">@wolfstudios24</a>
                         </li>
                     </ul>
 
