--- a/index.html
+++ b/index.html
@@ -206,4 +206,4 @@
 
         function handleRegister(event) {
             event.preventDefault();
-            const name =
+            const name =index.html
