--- a/index.html
+++ b/index.html
@@ -86,5 +86,8 @@
         const contentArea = document.getElementById('content-area');
         contentArea.innerHTML = `<h2 class="text-3xl font-bold text-center text-white mt-20">Você está na página: ${page}</h2>`;
     }
-</script>
+</script><a href="https://wa.me/5541998984617" target="_blank" class="block w-full py-3 gradient-lime text-white font-bold text-center rounded-xl hover:shadow-xl transition-all duration-300">
+    Comprar
+</a>
+
 
